samples/_failures_safe/1761337910_130249_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d6c39b90.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_d6c39b90.c:159:9: error: expected ‘:’ or ‘...’ at end of input
  159 |         case TOKEN_EOF
      |         ^~~~
./samples/SAFE/__tmp_d6c39b90.c:159:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d6c39b90.c:159:9: error: expected declaration or statement at end of input
